--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,107 @@
-body, html {
-    height: 100%;
-  }
-  .bg {
-    /* The image used */
-    background-image: url("../images/background.jpg");
-  
-    /* Full height */
-    height: 100%;
-  
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-  }
+body,
+html {
+  height: 100%;
+}
+
+.background {
+  /* The image used */
+  background-image: url("../images/background.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.title {
+  text-align: center;
+}
+
+.display-4 {
+  font-family: 'Condiment', cursive;
+  color: fuchsia;
+  font-size: 5rem;
+}
+
+.instruction {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.row {
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+.vertical-center {
+  margin: 0;
+  position: relative;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.bg-primary {
+  background-color: #f8f9fa00 !important;
+}
+
+.list-group-item.active {
+  z-index: 2;
+  color: #fff;
+  background-color: #e9ecef00;
+  border-color: #f8f9fa00;
+}
+
+.bg-secondary {
+  background-color: #e9ecef8f !important;
+  height: 600px;
+}
+
+.jumbotron {
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  background-color: #e9ecef00 !important;
+  border-radius: .3rem;
+  height: 100%;
+}
+
+.middle-area {
+  margin: 20px 0 20px 0;
+}
+
+.hangman {
+  text-align: center;
+  margin: 10px 0 60px 0;
+}
+
+.incorrect-sect {
+  margin-bottom: 60px;
+}
+
+.wrongL {
+  height: 20px;
+}
+
+.lead {
+  font-weight: 700;
+  font-size: 25px;
+}
+
+.instruction {
+  text-align: center;
+}
+
+.keyboard {
+  text-align: center;
+  padding: 60px;
+  visibility: 0;
+}
+
+.letterContain {
+  margin: 3px;
+  padding: 25px;
+  font-size: 25px;
+}
