--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,14 @@ html {
 }
 
 .display-4 {
-  font-family: 'Condiment', cursive;
+  font-family: 'Monoton', cursive;
   color: fuchsia;
-  font-size: 5rem;
+  font-size: 4rem;
+}
+
+#word-guess {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: black;
 }
 
 .instruction {
