--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,11 @@ html {
   color: black;
 }
 
+#guesses-left,
+#win-number {
+  color: white;
+}
+
 .instruction {
   text-align: center;
   font-size: 2rem;
